--- a/static/style.css
+++ b/static/style.css
@@ -1,28 +1,26 @@
-/* static/style.css */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
+    font-family: 'Arial', sans-serif;
+    margin: 20px;
 }
 
 h1 {
+    text-align: center;
     color: #333;
 }
 
-table {
-    width: 50%;
-    margin: 20px auto;
-    border-collapse: collapse;
+#chart-container {
+    max-width: 100%;
+    margin: auto;
+    text-align: center;
 }
 
-th, td {
+#lower-table {
+    width: 100%;
+    max-height: 100%;
+}
+
+#lower-table th, #lower-table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
-}
-
-th {
-    background-color: #4CAF50;
-    color: white;
 }
