Add live data fetching

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Stock Candlestick Chart</h1>
+    <h1>AAPL Candlestick Chart</h1>
     
     <!-- Render the Plotly chart -->
     <div id="chart-container">
