--- a/static/style.css
+++ b/static/style.css
@@ -14,12 +14,12 @@ h1 {
     text-align: center;
 }
 
-#lower-table {
+#info-table {
     width: 100%;
     max-height: 100%;
 }
 
-#lower-table th, #lower-table td {
+#info-table th, #info-table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
