--- a/templates/index.html
+++ b/templates/index.html
@@ -9,36 +9,24 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>AAPL Candlestick Chart</h1>
+    <h1>{{ INPUT_TICKER }} Candlestick Chart</h1>
     
     <!-- Render the Plotly chart -->
     <div id="chart-container">
         {{ candlestick_chart | safe }}
     </div>
 
-    <div>
-        <table id="lower-table">
+    <!-- Render the table -->
+    <div id="info-table">
+        <table>
             <tbody>
-                <tr>
-                    <td>Row 1, Column 1</td>
-                    <td>Row 1, Column 2</td>
-                </tr>
-                <tr>
-                    <td>Row 2, Column 1</td>
-                    <td>Row 2, Column 2</td>
-                </tr>
-                <tr>
-                    <td>Row 3, Column 1</td>
-                    <td>Row 3, Column 2</td>
-                </tr>
-                <tr>
-                    <td>Row 4, Column 1</td>
-                    <td>Row 4, Column 2</td>
-                </tr>
-                <tr>
-                    <td>Row 5, Column 1</td>
-                    <td>Row 5, Column 2</td>
-                </tr>
+                {% for row in info_table %}
+                    <tr>
+                        {% for column in row %}
+                            <td>{{ column }}</td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
