--- a/static/style.css
+++ b/static/style.css
@@ -1,26 +1,46 @@
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Arial', sans-serif;
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 h1 {
     text-align: center;
     color: #333;
+    margin-top: 2vh 0;
 }
 
 #chart-container {
+    flex: 1;
     max-width: 100%;
-    margin: auto;
     text-align: center;
 }
 
 #info-table {
-    width: 100%;
-    max-height: 100%;
+    flex: 1;
+    max-width: 100%;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
-#info-table th, #info-table td {
+#info-table table {
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#info-table td {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 10px;
     text-align: left;
+}
+
+#info-table tr:nth-child(even) {
+    background-color: #f9f9f9;
 }
