--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+header{
+    background-color: blue;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -11,6 +15,7 @@ h1 {
     text-align: center;
     color: #333;
     margin-top: 2vh 0;
+    color: white;
 }
 
 #chart-container {
