Add Company Info

--- a/static/style.css
+++ b/static/style.css
@@ -69,8 +69,9 @@ h1 {
     text-align: left;
 }
 
-#info-table thead{
+#info-table thead td{
     background-color: #f9f9f9;
+    text-align: center;
 }
 
 #info-table tr:nth-child(even) {
