--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                 <tr>
                     <td>Price Information</td>
                     <td>Fundamentals</td>
-                    <td>Options Data</td>
+                    <td>Company Information</td>
                 </tr>
             </thead>
             <tbody>
